<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="explain_title">简要说明</string>
    <string name="explain_photo_detection">照片检测可以识别出图中物体的类别，并同时标示物体位置。</string>
    <string name="explain_camera_detection">视频检测可以识别出摄像头中物体的类别，并同时标示物体位置。</string>
    <string name="explain_posenet">骨骼检测可以识别摄像头中，不同姿势下人体的面部五官与肢体姿势。</string>
    <string name="explain_style_transfer">风格迁移可以根据APP内置的标准图片改变用户目标图片的艺术风格。</string>
    <string name="explain_image_segmentation">图像分割用于检测目标在图片中的位置或者图片中出现的物体是属于何种类别的。</string>
    <string name="explain_image_classification">图像分类可以推测图片中出现物体的所属类别，并标示不同类别的可能性概率。</string>
    <string name="explain_garbage_classification">垃圾分类可识别出镜头中物体所属的垃圾类别。</string>
    <string name="explain_scene_detection">场景检测可以判断目标场景的类型。</string>
    <string name="activity_photo_title">照片检测</string>
    <string name="object_camery_title">视频检测</string>
    <string name="image_camera_title">图像分类</string>
    <string name="image_garbage_title">垃圾分类</string>
    <string name="image_scene_title">场景检测</string>
    <string name="image_scene_count">Scene Count</string>
    <string name="image_scene">Scene</string>
    <string name="image_score">Score</string>
    <string name="posenet_activity_title">骨骼检测</string>
    <string name="style_transfer_title">风格迁移</string>
    <string name="segmentation_toolbar_title">人像分割</string>
    <string name="title_choose_image_or_real_time">请点击下方图片、相机、实时进行识别</string>
    <string name="title_image_or_camera">请点击下方图片、相机进行提取</string>
    <string name="btn_photo">图片</string>
    <string name="btn_camera">相机</string>
    <string name="btn_real_time">实时</string>
    <string name="btn_detect">检测</string>
    <string name="btn_video">视频</string>
    <string name="title_video_recognition">视频识别</string>
    <string name="title_text_extraction">Text Extraction</string>
    <string name="title_texttranslation">Text Translation</string>
    <string name="title_real_time_translation">实时翻译</string>
    <string name="title_gesture_recognition">Gesture Recognition</string>
    <string name="app_need_permission">"MindSpore需要访问 “相机” 和 “外部存储器”，请到 “应用信息 -> 权限” 中授予！"</string>
    <string name="app_permission_by_hand">"去手动授权"</string>
    <string name="btn_translation">Translation</string>
    <string name="btn_offline_translation">Offline Translation</string>
    <string name="btn_detection_language">Detection language</string>g
    <string name="text_copied_successfully">复制成功</string>
    <string name="btn_copy">复制</string>
    <string name="text_null">当前内容为空</string>
    <string name="text_scenecount">"场景数"</string>
    <string name="btn_save">保存</string>
    <string name="no_pic_neededSave">没有需要保存的图片</string>
    <string name="save_success">保存成功</string>
    <string name="segmentation_fail">图像分割失败，再换一张图片试试</string>
    <string name="save_failure">保存失败</string>
    <string name="gesture_detected_failure">未检测到手势，再换一张图片试试</string>

</resources>