<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".textrecognition.TextRecognitionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/segmentation_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/icon_back"
        app:title="@string/title_text_extraction"
        app:titleTextColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_gray" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/gray_btn">

        <ImageView
            android:id="@+id/img_origin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/tv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:drawableTopCompat="@drawable/icon_style"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/title_image_or_camera"
            android:textAllCaps="false"
            android:textColor="@color/text_gray"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progressbar"
            android:visibility="invisible" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:background="@drawable/btn_small_item"
            android:gravity="center"
            android:onClick="onClickPhoto"
            android:text="@string/btn_photo"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_small_item_text_color"
            android:textSize="14sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:background="@drawable/btn_small_item"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:onClick="onClickCamera"
            android:text="@string/btn_camera"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_small_item_text_color"
            android:textSize="14sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_small_item"
            android:gravity="center"
            android:onClick="onClickRealTime"
            android:text="@string/btn_real_time"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_small_item_text_color"
            android:textSize="14sp"
            android:visibility="gone" />

    </LinearLayout>


    <TextView
        android:id="@+id/text_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/gray_btn"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:textIsSelectable="true"
        />

    <Button
        android:id="@+id/btn_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickCopy"
        android:text="@string/btn_copy"
        android:textColor="@color/black"
        android:background="@drawable/dialog_normal_white_bg"
        />


</LinearLayout>