<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ImageSegmentation.ImageSegmentationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ImageSegmentation_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/icon_back"
        app:title="@string/segmentation_toolbar_title"
        app:titleTextColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_gray" />

    <ImageView
        android:src="@drawable/icon_default"
        android:id="@+id/img_origin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <ImageView
        android:src="@drawable/icon_default"
        android:id="@+id/image_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_small_item"
            android:gravity="center"
            android:onClick="onClickPhoto"
            android:text="@string/btn_photo"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_small_item_text_color"
            android:textSize="14sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_small_item"
            android:gravity="center"
            android:onClick="onClickCamera"
            android:text="@string/btn_camera"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_small_item_text_color"
            android:textSize="14sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_small_item"
            android:gravity="center"
            android:onClick="onClickRealTime"
            android:text="@string/btn_real_time"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_small_item_text_color"
            android:textSize="14sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_small_item"
            android:gravity="center"
            android:onClick="onClickSave"
            android:text="@string/btn_save"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_small_item_text_color"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>