<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".bonedetection.PosenetMainActivitys">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/posenet_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/icon_back"
        app:title="@string/posenet_activity_title"
        app:titleTextColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_gray" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:background="@color/gray_btn">

        <ImageView
            android:id="@+id/img_origin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/skeleton_image"
            android:scaleType="fitStart"
            />
        <com.mindspore.hms.camera.GraphicOverlay
            android:id="@+id/skeleton_previewOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_small_item"
            android:gravity="center"
            android:onClick="onClickPhoto"
            android:text="@string/btn_photo"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_small_item_text_color"
            android:textSize="14sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_small_item"
            android:gravity="center"
            android:onClick="onClickCamera"
            android:text="@string/btn_camera"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_small_item_text_color"
            android:textSize="14sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_small_item"
            android:gravity="center"
            android:onClick="onClickRealTime"
            android:text="@string/btn_real_time"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_small_item_text_color"
            android:textSize="14sp" />
        <Button
            android:id="@+id/jiance"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_small_item"
            android:gravity="center"
            android:text="@string/btn_detect"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_small_item_text_color"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>